--- a/db.mysql.yml
+++ b/db.mysql.yml
@@ -5,7 +5,7 @@ services:
       MOODLE_DOCKER_DBTYPE: mysqli
       MOODLE_DOCKER_DBCOLLATION: utf8mb4_bin
   db:
-    image: mysql:8
+    image: mysql/mysql-server:8.0
     command: >
                 --character-set-server=utf8mb4
                 --collation-server=utf8mb4_bin
