--- a/db.mysql.yml
+++ b/db.mysql.yml
@@ -5,13 +5,11 @@ services:
       MOODLE_DOCKER_DBTYPE: mysqli
       MOODLE_DOCKER_DBCOLLATION: utf8mb4_bin
   db:
-    image: mysql/mysql-server:8.0
+    image: mysql:8
     command: >
                 --character-set-server=utf8mb4
                 --collation-server=utf8mb4_bin
-                --innodb_file_format=barracuda
                 --innodb_file_per_table=On
-                --innodb_large_prefix=On
                 --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: "m@0dl3ing"
