--- a/base.yml
+++ b/base.yml
@@ -14,6 +14,7 @@ services:
       MOODLE_DOCKER_BROWSER: firefox
       MOODLE_DOCKER_WEB_HOST: "${MOODLE_DOCKER_WEB_HOST}"
       MOODLE_DOCKER_TIMEOUT_FACTOR: "${MOODLE_DOCKER_TIMEOUT_FACTOR}"
+      PHP-INI-memory_limit=256M:
   exttests:
     image: moodlehq/moodle-exttests
     volumes:
